--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       </div>
     </div>
   </header>
-<hr>
+  <hr>
+
   <!-- Main Content -->
   <main class="max-w-6xl mx-auto px-6 mt-12">
     <!-- About Section -->
@@ -87,6 +88,18 @@
       </div>
     </section>
 
+    <!-- CV Section -->
+    <section id="cv" class="mb-16">
+      <h2 class="section-title text-yellow-400">My CV</h2>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+        <img src="Capture.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
+        <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
+        <div class="text-center mt-4">
+          <a href="https://drive.google.com/file/d/1289RoBT3837JM6dRxIY85F394f0bfYYi/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="mb-16">
       <h2 class="section-title text-yellow-400">Contact Me</h2>
@@ -96,7 +109,6 @@
         <li><i class="fas fa-phone text-yellow-400 icon animated-icon"></i> <strong>Phone:</strong> +91 9322860752</li>
         <li><i class="fab fa-github text-yellow-400 icon animated-icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline">github.com/prasad-ghavghave</a></li>
         <li><i class="fab fa-linkedin text-yellow-400 icon animated-icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline">linkedin.com/in/prasad-ghavghave</a></li>
-        <li><i class="fas fa-file-alt text-yellow-400 icon animated-icon"></i> <strong>CV:</strong> <a href="https://drive.google.com/file/d/1289RoBT3837JM6dRxIY85F394f0bfYYi/view?usp=sharing" target="_blank" class="text-yellow-400 hover:underline" download>Download My CV</a></li>
       </ul>
     </section>
   </main>
@@ -107,6 +119,5 @@
       <p>&copy; 2025 Prasad S. Ghavghave. All rights reserved.</p>
     </div>
   </footer>
-
 </body>
 </html>
