--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2 class="section-title text-yellow-400">My CV</h2>
       <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
         <img src="Capture.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
-        <p class="text-gray-300 text-center mt-4">Click the button below to download my Resume</p>
+        <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
         <div class="text-center mt-4">
           <a href="https://drive.google.com/file/d/1NOat7ek0BbpKDLXK-I-fcLfG0Fd3QU-u/view?usp=drive_link" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
         </div>
