--- a/index.html
+++ b/index.html
@@ -79,11 +79,15 @@
       <div class="space-y-8">
         <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
           <h3 class="text-2xl font-semibold text-yellow-300">Fruit Defect Prediction</h3>
-          <p class="text-gray-300">Developed a machine learning model to detect defects in fruits using image recognition techniques and the HAM10000 dataset.</p>
+          <p class="text-gray-300">Developed a machine learning model to detect defects in fruits using image recognition techniques and the HAM10000 dataset. <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
         </div>
         <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-          <h3 class="text-2xl font-semibold text-yellow-300">Skin Disease Prediction</h3>
-          <p class="text-gray-300">Built a prediction model using HAM10000 dataset to classify different types of skin diseases with high accuracy.</p>
+          <h3 class="text-2xl font-semibold text-yellow-300">Bug Tracker</h3>
+          <p class="text-gray-300">Created a tool for tracking bugs and managing issues for software development projects. <a href="https://bugtracker-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
+        </div>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+          <h3 class="text-2xl font-semibold text-yellow-300">Efficiency Analyzer</h3>
+          <p class="text-gray-300">Developed a tool to analyze the efficiency of tasks and operations in various business environments. <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
         </div>
       </div>
     </section>
@@ -95,7 +99,7 @@
         <img src="Capture.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
         <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
         <div class="text-center mt-4">
-          <a href="https://drive.google.com/file/d/1NOat7ek0BbpKDLXK-I-fcLfG0Fd3QU-u/view?usp=drive_link" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
+          <a href="https://drive.google.com/file/d/1NOat7ek0BbpKDLXK-I-fcLfG0Fd3QU-u/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
         </div>
       </div>
     </section>
@@ -105,7 +109,7 @@
       <h2 class="section-title text-yellow-400">Contact Me</h2>
       <p class="text-gray-300 mb-4">Feel free to reach out to me at:</p>
       <ul class="space-y-4">
-        <li><i class="fas fa-envelope text-yellow-400 icon animated-icon"></i> <strong>Email:</strong> prasadghavghave7@gmail.com</li>
+        <li><i class="fas fa-envelope text-yellow-400 icon animated-icon"></i> <strong>Email:</strong> <a href="prasadghavghave7@gmail.com" class="text-yellow-400 hover:underline">prasadghavghave7@gmail.com</a></li>
         <li><i class="fas fa-phone text-yellow-400 icon animated-icon"></i> <strong>Phone:</strong> +91 9322860752</li>
         <li><i class="fab fa-github text-yellow-400 icon animated-icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline">github.com/prasad-ghavghave</a></li>
         <li><i class="fab fa-linkedin text-yellow-400 icon animated-icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline">linkedin.com/in/prasad-ghavghave</a></li>
