--- a/index.html
+++ b/index.html
@@ -92,14 +92,27 @@
       </div>
     </section>
 
+    <!-- Publications Section -->
+    <section id="publications" class="mb-16">
+      <h2 class="section-title text-yellow-400">Publications</h2>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
+        <h3 class="text-2xl font-semibold text-yellow-300">IoT and the Future of Healthcare: Revolutionizing Remote Patient Monitoring</h3>
+        <p class="text-gray-300">
+          <em>2025 International Conference on Machine Learning and Autonomous Systems (ICMLAS), IEEE</em>, pp. 1926–1932, March 10, 2025.
+          <br>
+          <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=5gWoDTUAAAAJ&citation_for_view=5gWoDTUAAAAJ:u5HHmVD_uO8C" target="_blank" class="text-yellow-400 hover:underline">Here</a>
+        </p>
+      </div>
+    </section>
+
     <!-- CV Section -->
     <section id="cv" class="mb-16">
       <h2 class="section-title text-yellow-400">My CV</h2>
       <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-        <img src="Capture.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
+        <img src="C:\Users\Admin\Desktop\portpolio\portpolio\Portfolio\abc\59271.jpg" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
         <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
         <div class="text-center mt-4">
-          <a href="https://drive.google.com/file/d/1NOat7ek0BbpKDLXK-I-fcLfG0Fd3QU-u/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
+          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
         </div>
       </div>
     </section>
@@ -109,10 +122,11 @@
       <h2 class="section-title text-yellow-400">Contact Me</h2>
       <p class="text-gray-300 mb-4">Feel free to reach out to me at:</p>
       <ul class="space-y-4">
-        <li><i class="fas fa-envelope text-yellow-400 icon animated-icon"></i> <strong>Email:</strong> <a href="prasadghavghave7@gmail.com" class="text-yellow-400 hover:underline">prasadghavghave7@gmail.com</a></li>
+        <li><i class="fas fa-envelope text-yellow-400 icon animated-icon"></i> <strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com" class="text-yellow-400 hover:underline">prasadghavghave0@gmail.com</a></li>
         <li><i class="fas fa-phone text-yellow-400 icon animated-icon"></i> <strong>Phone:</strong> +91 9322860752</li>
         <li><i class="fab fa-github text-yellow-400 icon animated-icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline">github.com/prasad-ghavghave</a></li>
         <li><i class="fab fa-linkedin text-yellow-400 icon animated-icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline">linkedin.com/in/prasad-ghavghave</a></li>
+        <li><i class="fas fa-graduation-cap text-yellow-400 icon animated-icon"></i> <strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="text-yellow-400 hover:underline">View Profile</a></li>
       </ul>
     </section>
   </main>
