--- a/index.html
+++ b/index.html
@@ -1,141 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prasad S. Ghavghave - Portfolio</title>
+
+  <!-- Tailwind CSS for utility-first styling -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+
+  <!-- Google Fonts: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+
+  <!-- AOS (Animate On Scroll) CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #1e1e2f, #282a36);
       color: #e0e0e0;
     }
-    .icon:hover {
-      transform: scale(1.2);
-      transition: 0.3s ease-in-out;
-    }
+
     .section-title {
       font-size: 2.5rem;
       border-bottom: 2px solid #f1c40f;
       display: inline-block;
       margin-bottom: 1rem;
     }
-    .animated-icon {
-      animation: bounce 2s infinite;
+
+    .icon:hover {
+      transform: scale(1.2);
+      transition: 0.3s ease-in-out;
     }
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
+
     .header-background {
       background: url('abc/59271.jpg') no-repeat center center;
       background-size: cover;
     }
   </style>
 </head>
+
 <body class="bg-gray-900">
 
-  <!-- Header Section -->
-  <header class="header-background text-white py-16">
+  <!-- Header -->
+  <header class="header-background text-white py-16" data-aos="fade-down" data-aos-anchor-placement="top-bottom">
     <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center space-y-8 md:space-y-0 md:space-x-10">
-      <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg">
-      <div class="text-center md:text-left">
-        <h1 class="text-5xl font-extrabold text-yellow-400">Prasad S. Ghavghave</h1>
-        <p class="text-lg text-gray-400 mt-4">Data Analytics Engineer | B.Tech in AIML from DMIHER University</p>
+
+      <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg" data-aos="flip-left" data-aos-anchor-placement="top-bottom">
+
+      <div class="text-center md:text-left" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
+        <h1 class="text-5xl font-extrabold text-yellow-400" data-aos="fade-up" data-aos-delay="200"><strong>Prasad S. Ghavghave</strong></h1>
+        <p class="text-lg text-gray-300 mt-4" data-aos="fade-up" data-aos-delay="400"><strong>AIML Engineer | Data Analytics Engineer | B.Tech in AIML from DMIHER University</strong></p>
       </div>
     </div>
   </header>
   <hr>
 
-  <!-- Main Content -->
   <main class="max-w-6xl mx-auto px-6 mt-12">
-    <!-- About Section -->
-    <section id="about" class="mb-16">
-      <h2 class="section-title text-yellow-400">About Me</h2>
-      <p class="text-gray-300 leading-relaxed">
-        Hello! I’m Prasad S. Ghavghave, a passionate Data Analytics Engineer with a B.Tech in Artificial Intelligence and Machine Learning from DMIHER University, Sawangi. I specialize in data-driven solutions, transforming data into actionable insights.
+
+    <!-- About -->
+    <section id="about" class="mb-16" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400" data-aos="fade-right"><strong>About Me</strong></h2>
+      <p class="text-gray-300 leading-relaxed" data-aos="fade-left" data-aos-delay="300">
+        Hello! I’m <strong>Prasad S. Ghavghave</strong>, a passionate <strong>Data Analytics Engineer</strong> with a <strong>B.Tech in Artificial Intelligence and Machine Learning</strong> from DMIHER University, Sawangi. I specialize in data-driven solutions, transforming data into actionable insights.
       </p>
     </section>
 
-    <!-- Skills Section -->
-    <section id="skills" class="mb-16">
-      <h2 class="section-title text-yellow-400">Skills</h2>
+    <!-- Skills -->
+    <section id="skills" class="mb-16" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400" data-aos="fade-right"><strong>Skills</strong></h2>
       <ul class="grid grid-cols-2 md:grid-cols-3 gap-6">
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">Python</li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">Data Analysis</li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">Machine Learning</li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">SQL</li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">Power BI</li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg">Excel</li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="100"><strong>Python</strong></li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="200"><strong>Data Analysis</strong></li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="300"><strong>Machine Learning</strong></li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="400"><strong>SQL</strong></li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="500"><strong>Power BI</strong></li>
+        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="600"><strong>Excel</strong></li>
       </ul>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="mb-16">
-      <h2 class="section-title text-yellow-400">Projects</h2>
+    <!-- Projects -->
+    <section id="projects" class="mb-16" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400"><strong>Projects</strong></h2>
       <div class="space-y-8">
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-          <h3 class="text-2xl font-semibold text-yellow-300">Fruit Defect Prediction</h3>
-          <p class="text-gray-300">Developed a machine learning model to detect defects in fruits using image recognition techniques and the HAM10000 dataset. <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
+          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Fruit Defect Prediction</strong></h3>
+          <p class="text-gray-300">
+            Developed a machine learning model to detect defects in fruits using image recognition techniques and the HAM10000 dataset.
+            <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
+          </p>
         </div>
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-          <h3 class="text-2xl font-semibold text-yellow-300">Bug Tracker</h3>
-          <p class="text-gray-300">Created a tool for tracking bugs and managing issues for software development projects. <a href="https://bugtracker-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
+
+        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
+          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Bug Tracker</strong></h3>
+          <p class="text-gray-300">
+            Created a tool for tracking bugs and managing issues for software development projects.
+            <a href="https://bugtracker-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
+          </p>
         </div>
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-          <h3 class="text-2xl font-semibold text-yellow-300">Efficiency Analyzer</h3>
-          <p class="text-gray-300">Developed a tool to analyze the efficiency of tasks and operations in various business environments. <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline">View Project</a></p>
+
+        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
+          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Efficiency Analyzer</strong></h3>
+          <p class="text-gray-300">
+            Developed a tool to analyze the efficiency of tasks and operations in various business environments.
+            <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
+          </p>
         </div>
       </div>
     </section>
 
-    <!-- Publications Section -->
-    <section id="publications" class="mb-16">
-      <h2 class="section-title text-yellow-400">Publications</h2>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-        <h3 class="text-2xl font-semibold text-yellow-300">IoT and the Future of Healthcare: Revolutionizing Remote Patient Monitoring</h3>
+    <!-- Publications -->
+    <section id="publications" class="mb-16" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400"><strong>Publications</strong></h2>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg">
+        <h3 class="text-2xl font-semibold text-yellow-300"><strong>IoT and the Future of Healthcare: Revolutionizing Remote Patient Monitoring</strong></h3>
         <p class="text-gray-300">
           <em>2025 International Conference on Machine Learning and Autonomous Systems (ICMLAS), IEEE</em>, pp. 1926–1932, March 10, 2025.
-          <br>
-          <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=5gWoDTUAAAAJ&citation_for_view=5gWoDTUAAAAJ:u5HHmVD_uO8C" target="_blank" class="text-yellow-400 hover:underline">Here</a>
+          <br />
+          <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=5gWoDTUAAAAJ&citation_for_view=5gWoDTUAAAAJ:u5HHmVD_uO8C" target="_blank" class="text-yellow-400 hover:underline"><strong>Here</strong></a>
         </p>
       </div>
     </section>
 
-    <!-- CV Section -->
-    <section id="cv" class="mb-16">
-      <h2 class="section-title text-yellow-400">My CV</h2>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-        <img src="C:\Users\Admin\Desktop\portpolio\portpolio\Portfolio\abc\59271.jpg" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg">
+    <!-- CV -->
+    <section id="cv" class="mb-16" data-aos="flip-down" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400"><strong>My CV</strong></h2>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg">
+        <img src="abc/abcd.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg"/>
         <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
         <div class="text-center mt-4">
-          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600 transition-colors">Download My CV</a>
+          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600"><strong>Download My CV</strong></a>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="mb-16">
-      <h2 class="section-title text-yellow-400">Contact Me</h2>
+    <!-- Contact -->
+    <section id="contact" class="mb-16" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
+      <h2 class="section-title text-yellow-400"><strong>Contact Me</strong></h2>
       <p class="text-gray-300 mb-4">Feel free to reach out to me at:</p>
       <ul class="space-y-4">
-        <li><i class="fas fa-envelope text-yellow-400 icon animated-icon"></i> <strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com" class="text-yellow-400 hover:underline">prasadghavghave0@gmail.com</a></li>
-        <li><i class="fas fa-phone text-yellow-400 icon animated-icon"></i> <strong>Phone:</strong> +91 9322860752</li>
-        <li><i class="fab fa-github text-yellow-400 icon animated-icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline">github.com/prasad-ghavghave</a></li>
-        <li><i class="fab fa-linkedin text-yellow-400 icon animated-icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline">linkedin.com/in/prasad-ghavghave</a></li>
-        <li><i class="fas fa-graduation-cap text-yellow-400 icon animated-icon"></i> <strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="text-yellow-400 hover:underline">View Profile</a></li>
+        <li><i class="fas fa-envelope text-yellow-400 icon"></i> <strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com" class="text-yellow-400 hover:underline"><strong>prasadghavghave0@gmail.com</strong></a></li>
+        <li><i class="fas fa-phone text-yellow-400 icon"></i> <strong>Phone:</strong> <strong>+91 9322860752</strong></li>
+        <li><i class="fab fa-github text-yellow-400 icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline"><strong>github.com/prasad-ghavghave</strong></a></li>
+        <li><i class="fab fa-linkedin text-yellow-400 icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline"><strong>linkedin.com/in/prasad-ghavghave</strong></a></li>
+        <li><i class="fas fa-graduation-cap text-yellow-400 icon"></i> <strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="text-yellow-400 hover:underline"><strong>View Profile</strong></a></li>
       </ul>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-400 py-6">
+  <footer class="bg-gray-800 text-gray-400 py-6" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <p>&copy; 2025 Prasad S. Ghavghave. All rights reserved.</p>
+      <p>&copy; 2025 <strong>Prasad S. Ghavghave</strong>. All rights reserved.</p>
     </div>
   </footer>
+
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: false,
+      mirror: true,
+      duration: 1000
+    });
+  </script>
 </body>
 </html>
