--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prasad S. Ghavghave - Portfolio</title>
 
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJPM1D32XB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GJPM1D32XB');
+  </script>
+
   <!-- Tailwind CSS for utility-first styling -->
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -43,13 +52,10 @@
 </head>
 
 <body class="bg-gray-900">
-
   <!-- Header -->
   <header class="header-background text-white py-16" data-aos="fade-down" data-aos-anchor-placement="top-bottom">
     <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center space-y-8 md:space-y-0 md:space-x-10">
-
       <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg" data-aos="flip-left" data-aos-anchor-placement="top-bottom">
-
       <div class="text-center md:text-left" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
         <h1 class="text-5xl font-extrabold text-yellow-400" data-aos="fade-up" data-aos-delay="200"><strong>Prasad S. Ghavghave</strong></h1>
         <p class="text-lg text-gray-300 mt-4" data-aos="fade-up" data-aos-delay="400"><strong>AIML Engineer | Data Analytics Engineer | B.Tech in AIML from DMIHER University</strong></p>
@@ -59,7 +65,6 @@
   <hr>
 
   <main class="max-w-6xl mx-auto px-6 mt-12">
-
     <!-- About -->
     <section id="about" class="mb-16" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <h2 class="section-title text-yellow-400" data-aos="fade-right"><strong>About Me</strong></h2>
