--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prasad S. Ghavghave - Portfolio</title>
 
-  <!-- ✅ Google Analytics -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJPM1D32XB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,162 +14,201 @@
     gtag('config', 'G-GJPM1D32XB');
   </script>
 
-  <!-- Tailwind CSS for utility-first styling -->
+  <!-- Tailwind & Fonts & AOS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
-
-  <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
-
-  <!-- AOS (Animate On Scroll) CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet"/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+
+  <!-- Custom Styles -->
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #282a36);
-      color: #e0e0e0;
+      font-family: 'Poppins',sans-serif;
+      background: linear-gradient(135deg,#0f0c29,#302b63,#24243e);
+      color:#e0e0e0;
     }
-
     .section-title {
-      font-size: 2.5rem;
-      border-bottom: 2px solid #f1c40f;
-      display: inline-block;
-      margin-bottom: 1rem;
+      font-size:2.75rem;
+      font-weight:800;
+      border-bottom:3px solid #FFD700;
+      display:inline-block;
+      margin-bottom:1.5rem;
+      color:#FFD700;
     }
-
-    .icon:hover {
-      transform: scale(1.2);
-      transition: 0.3s ease-in-out;
-    }
-
+    .icon:hover { transform:scale(1.2); transition:0.3s ease-in-out; }
     .header-background {
-      background: url('abc/59271.jpg') no-repeat center center;
-      background-size: cover;
+      background:url('abc/59271.jpg') no-repeat center center;
+      background-size:cover;
     }
+    .glass-card {
+      background:rgba(255,255,255,0.05);
+      backdrop-filter:blur(12px);
+      border:1px solid rgba(255,255,255,0.1);
+      box-shadow:0 6px 30px rgba(0,0,0,0.4);
+      transition:0.3s ease;
+    }
+    .glass-card:hover {
+      transform:scale(1.03);
+      box-shadow:0 8px 40px rgba(255,255,255,0.1);
+    }
+    a:hover { color:#00FFE0; }
+    .blinking-cursor {
+      font-weight:600;
+      font-size:1.1em;
+      color:#FFD700;
+      animation: blink 1s step-end infinite;
+    }
+    @keyframes blink { from,to { opacity:0 } 50% { opacity:1 } }
   </style>
 </head>
 
-<body class="bg-gray-900">
+<body>
+
   <!-- Header -->
-  <header class="header-background text-white py-16" data-aos="fade-down" data-aos-anchor-placement="top-bottom">
+  <header class="header-background text-white py-20" data-aos="fade-down">
     <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center space-y-8 md:space-y-0 md:space-x-10">
-      <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg" data-aos="flip-left" data-aos-anchor-placement="top-bottom">
-      <div class="text-center md:text-left" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
-        <h1 class="text-5xl font-extrabold text-yellow-400" data-aos="fade-up" data-aos-delay="200"><strong>Prasad S. Ghavghave</strong></h1>
-        <p class="text-lg text-gray-300 mt-4" data-aos="fade-up" data-aos-delay="400"><strong>AIML Engineer | Data Analytics Engineer | B.Tech in AIML from DMIHER University</strong></p>
+      <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 shadow-lg" style="border-color:#FFD700;">
+      <div class="text-center md:text-left">
+        <h1 class="text-5xl font-extrabold text-[#FFD700]">Prasad S. Ghavghave</h1>
+        <p class="text-lg text-gray-300 mt-4 font-medium">
+          <span id="typed-text"></span><span class="blinking-cursor">|</span>
+        </p>
       </div>
     </div>
   </header>
-  <hr>
 
-  <main class="max-w-6xl mx-auto px-6 mt-12">
+  <!-- Main Content -->
+  <main class="max-w-6xl mx-auto px-6 mt-14 space-y-20">
+
     <!-- About -->
-    <section id="about" class="mb-16" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400" data-aos="fade-right"><strong>About Me</strong></h2>
-      <p class="text-gray-300 leading-relaxed" data-aos="fade-left" data-aos-delay="300">
-        Hello! I’m <strong>Prasad S. Ghavghave</strong>, a passionate <strong>Data Analytics Engineer</strong> with a <strong>B.Tech in Artificial Intelligence and Machine Learning</strong> from DMIHER University, Sawangi. I specialize in data-driven solutions, transforming data into actionable insights.
+    <section id="about" data-aos="fade-up">
+      <h2 class="section-title">About Me</h2>
+      <p class="text-gray-300 leading-relaxed text-lg">
+        Hello! I’m <strong>Prasad S. Ghavghave</strong>, a passionate <strong>Data Analytics Engineer</strong> with a <strong>B.Tech in Artificial Intelligence and Machine Learning</strong> from DMIHER University, Sawangi.
       </p>
     </section>
 
     <!-- Skills -->
-    <section id="skills" class="mb-16" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400" data-aos="fade-right"><strong>Skills</strong></h2>
-      <ul class="grid grid-cols-2 md:grid-cols-3 gap-6">
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="100"><strong>Python</strong></li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="200"><strong>Data Analysis</strong></li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="300"><strong>Machine Learning</strong></li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="400"><strong>SQL</strong></li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="500"><strong>Power BI</strong></li>
-        <li class="bg-gray-700 p-4 rounded-lg text-center text-yellow-300 shadow hover:shadow-lg" data-aos="flip-left" data-aos-delay="600"><strong>Excel</strong></li>
-      </ul>
+    <section id="skills" data-aos="zoom-in-up">
+      <h2 class="section-title text-center">Skills</h2>
+      <p class="text-center text-gray-400 mb-10">Technologies & Tools I Use Most</p>
+      <div class="grid grid-cols-2 sm:grid-cols-3 gap-6">
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fab fa-python text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">Python</h3></div>
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fas fa-database text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">Data Analysis</h3></div>
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fas fa-robot text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">Machine Learning</h3></div>
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fas fa-code text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">SQL</h3></div>
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fas fa-chart-bar text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">Power BI</h3></div>
+        <div class="glass-card p-5 rounded-xl text-center"><i class="fas fa-file-excel text-4xl mb-3" style="color:#FFD700;"></i><h3 class="font-bold text-white">Excel</h3></div>
+      </div>
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="mb-16" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400"><strong>Projects</strong></h2>
-      <div class="space-y-8">
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
-          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Fruit Defect Prediction</strong></h3>
-          <p class="text-gray-300">
-            Developed a machine learning model to detect defects in fruits using image recognition techniques and the HAM10000 dataset.
-            <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
-          </p>
+    <section id="projects" data-aos="fade-up">
+      <h2 class="section-title text-center">Projects</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+        <div class="glass-card p-6 rounded-xl text-center">
+          <i class="fas fa-apple-alt text-4xl text-pink-400 mb-4"></i>
+          <h3 class="text-xl font-bold text-white mb-2">Fruit Defect Prediction</h3>
+          <p class="text-gray-300 text-sm mb-2">ML model to detect fruit defects using image recognition.</p>
+          <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="font-semibold">View Project</a>
         </div>
-
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
-          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Bug Tracker</strong></h3>
-          <p class="text-gray-300">
-            Created a tool for tracking bugs and managing issues for software development projects.
-            <a href="https://bugtracker-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
-          </p>
+        <div class="glass-card p-6 rounded-xl text-center">
+          <i class="fas fa-bug text-4xl text-white mb-4"></i>
+          <h3 class="text-xl font-bold text-white mb-2">Bug Tracker</h3>
+          <p class="text-gray-300 text-sm mb-2">Tool for tracking software bugs and managing issues.</p>
+          <a href="https://bugtracker-prasad111.streamlit.app/" target="_blank" class="font-semibold">View Project</a>
         </div>
-
-        <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg" data-aos="zoom-in-up" data-aos-anchor-placement="top-bottom">
-          <h3 class="text-2xl font-semibold text-yellow-300"><strong>Efficiency Analyzer</strong></h3>
-          <p class="text-gray-300">
-            Developed a tool to analyze the efficiency of tasks and operations in various business environments.
-            <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="text-yellow-400 hover:underline"><strong>View Project</strong></a>
-          </p>
+        <div class="glass-card p-6 rounded-xl text-center">
+          <i class="fas fa-chart-line text-4xl text-blue-400 mb-4"></i>
+          <h3 class="text-xl font-bold text-white mb-2">Efficiency Analyzer</h3>
+          <p class="text-gray-300 text-sm mb-2">Tool to analyze and improve business task efficiency.</p>
+          <a href="https://efficiencyanalyzer-prasad111.streamlit.app/" target="_blank" class="font-semibold">View Project</a>
         </div>
       </div>
     </section>
 
     <!-- Publications -->
-    <section id="publications" class="mb-16" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400"><strong>Publications</strong></h2>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg">
-        <h3 class="text-2xl font-semibold text-yellow-300"><strong>IoT and the Future of Healthcare: Revolutionizing Remote Patient Monitoring</strong></h3>
-        <p class="text-gray-300">
-          <em>2025 International Conference on Machine Learning and Autonomous Systems (ICMLAS), IEEE</em>, pp. 1926–1932, March 10, 2025.
-          <br />
-          <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=5gWoDTUAAAAJ&citation_for_view=5gWoDTUAAAAJ:u5HHmVD_uO8C" target="_blank" class="text-yellow-400 hover:underline"><strong>Here</strong></a>
+    <section id="publications" data-aos="fade-up">
+      <h2 class="section-title text-center">Publications</h2>
+      <div class="glass-card p-6 rounded-xl text-white">
+        <h3 class="text-xl font-bold mb-2" style="color:#FFD700;">IoT and the Future of Healthcare</h3>
+        <p class="text-gray-300 text-sm mb-2">
+          <em>2025 International Conference on Machine Learning and Autonomous Systems (ICMLAS), IEEE</em><br/>
+          pp. 1926–1932, March 10, 2025.
         </p>
+        <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="font-semibold">View Publication</a>
       </div>
     </section>
 
     <!-- CV -->
-    <section id="cv" class="mb-16" data-aos="flip-down" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400"><strong>My CV</strong></h2>
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg">
-        <img src="abc/abcd.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg"/>
-        <p class="text-gray-300 text-center mt-4">Click the button below to download my CV.</p>
-        <div class="text-center mt-4">
-          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank" class="bg-yellow-500 text-gray-900 py-2 px-4 rounded-lg shadow hover:bg-yellow-600"><strong>Download My CV</strong></a>
+    <section id="cv" data-aos="flip-down">
+      <h2 class="section-title text-center">My CV</h2>
+      <div class="glass-card p-6 rounded-xl text-center">
+        <img src="abc/abcd.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg mb-4"/>
+        <p class="text-gray-300">Click below to download my CV.</p>
+        <div class="mt-4">
+          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank"
+             class="py-2 px-5 font-bold rounded-lg shadow"
+             style="background-color:#FFD700; color:#1e1e2f;">Download My CV</a>
         </div>
       </div>
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="mb-16" data-aos="zoom-in" data-aos-anchor-placement="top-bottom">
-      <h2 class="section-title text-yellow-400"><strong>Contact Me</strong></h2>
-      <p class="text-gray-300 mb-4">Feel free to reach out to me at:</p>
-      <ul class="space-y-4">
-        <li><i class="fas fa-envelope text-yellow-400 icon"></i> <strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com" class="text-yellow-400 hover:underline"><strong>prasadghavghave0@gmail.com</strong></a></li>
-        <li><i class="fas fa-phone text-yellow-400 icon"></i> <strong>Phone:</strong> <strong>+91 9322860752</strong></li>
-        <li><i class="fab fa-github text-yellow-400 icon"></i> <strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave" class="text-yellow-400 hover:underline"><strong>github.com/prasad-ghavghave</strong></a></li>
-        <li><i class="fab fa-linkedin text-yellow-400 icon"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave" class="text-yellow-400 hover:underline"><strong>linkedin.com/in/prasad-ghavghave</strong></a></li>
-        <li><i class="fas fa-graduation-cap text-yellow-400 icon"></i> <strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="text-yellow-400 hover:underline"><strong>View Profile</strong></a></li>
-      </ul>
+    <section id="contact" data-aos="zoom-in">
+      <h2 class="section-title text-center">📬 Contact Me</h2>
+      <div class="grid md:grid-cols-2 gap-10 mt-10">
+        <div class="space-y-4 text-lg">
+          <p><i class="fas fa-envelope icon" style="color:#FFD700;"></i><strong> Email:</strong> <a href="mailto:prasadghavghave0@gmail.com">prasadghavghave0@gmail.com</a></p>
+          <p><i class="fas fa-phone icon" style="color:#FFD700;"></i><strong> Phone:</strong> +91 9322860752</p>
+          <p><i class="fab fa-github icon" style="color:#FFD700;"></i><strong> GitHub:</strong> <a href="https://github.com/prasad-ghavghave">github.com/prasad-ghavghave</a></p>
+          <p><i class="fab fa-linkedin icon" style="color:#FFD700;"></i><strong> LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave">linkedin.com/in/prasad-ghavghave</a></p>
+          <p><i class="fas fa-graduation-cap icon" style="color:#FFD700;"></i><strong> Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en">View Profile</a></p>
+        </div>
+        <form action="https://formsubmit.co/prasadghavghave0@gmail.com" method="POST" class="glass-card p-6 rounded-xl space-y-4">
+          <div><label>Name</label><input name="name" required class="w-full p-2 rounded bg-gray-800 border border-gray-600 text-white focus:ring-[#FFD700]" placeholder="Your Name"/></div>
+          <div><label>Email</label><input name="email" type="email" required class="w-full p-2 rounded bg-gray-800 border border-gray-600 text-white focus:ring-[#FFD700]" placeholder="you@example.com"/></div>
+          <div><label>Message</label><textarea name="message" rows="4" required class="w-full p-2 rounded bg-gray-800 border border-gray-600 text-white focus:ring-[#FFD700]" placeholder="Write your message here..."></textarea></div>
+          <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_autoresponse" value="Thank you for contacting me! I’ll get back to you soon.">
+          <button type="submit" class="py-2 px-4 bg-[#FFD700] text-black font-bold rounded hover:bg-yellow-400 transition">Send Message</button>
+        </form>
+      </div>
     </section>
+
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-400 py-6" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-    <div class="max-w-6xl mx-auto px-4 text-center">
+  <footer class="bg-gray-800 text-gray-400 py-6 mt-16" data-aos="fade-up">
+    <div class="max-w-6xl mx-auto text-center">
       <p>&copy; 2025 <strong>Prasad S. Ghavghave</strong>. All rights reserved.</p>
     </div>
   </footer>
 
-  <!-- AOS JS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- Typing Text Script -->
   <script>
-    AOS.init({
-      once: false,
-      mirror: true,
-      duration: 1000
-    });
+    AOS.init({ once: false, mirror: true, duration: 1000 });
+    const roles = ["AIML Engineer ", "Data Analytics Engineer "];
+    let part = 0, partIndex = 0, isDeleting = false;
+    const el = document.getElementById("typed-text"), speed = 50;
+    function type() {
+      const cur = roles[part];
+      el.textContent = isDeleting ? cur.substring(0, partIndex--) : cur.substring(0, partIndex++);
+      if(!isDeleting && partIndex === cur.length){ isDeleting=true; setTimeout(type, 1200);}
+      else if(isDeleting && partIndex === 0){ isDeleting=false; part=(part+1)%roles.length; setTimeout(type, 500);}
+      else setTimeout(type, speed);
+    }
+    document.addEventListener("DOMContentLoaded", type);
   </script>
+
+  <!-- ✅ Chatbot Embed Script -->
+  <script>
+    window.chatbaseConfig = {
+      chatbotId: "6g4XQ1XY2ajdt0UTcNv7q"
+    };
+  </script>
+  <script src="https://www.chatbase.co/embed.min.js" defer></script>
+
 </body>
 </html>
