--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     defer>
   </script>
 <!-- 💬 Custom Floating Chatbot Button + Modal -->
-<button id="chatbotBtn">💬 Chat with Me</button>
+<button id="chatbotBtn">💬 Chat with Prasad's AI</button>
 
 <div id="chatbotModal" class="fixed inset-0 hidden bg-black bg-opacity-60 z-50 items-center justify-center">
   <div id="chatbotIframeContainer" class="relative w-[95%] max-w-3xl h-[85vh] bg-white rounded-xl overflow-hidden shadow-lg">
