--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-GJPM1D32XB');
+    gtag('config', 'G-RZ5H5JW9MN');
   </script>
 
   <!-- Tailwind & Fonts & AOS -->
