--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet"/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
+<!-- Swiper CSS -->
+<link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
 
   <!-- Custom Styles -->
   <style>
@@ -110,6 +112,103 @@
            target="_blank" class="font-semibold">View Publication</a>
       </div>
     </section>
+  <section id="certifications" data-aos="fade-up">
+  <h2 class="section-title text-center">Certifications</h2>
+  <p class="text-center text-gray-300 mb-6">Swipe or scroll to explore</p>
+
+  <div class="relative px-4">
+    <!-- Navigation arrows -->
+    <div class="swiper-button-prev !text-white !left-0"></div>
+    <div class="swiper-button-next !text-white !right-0"></div>
+
+    <!-- Swiper container -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <!-- 19 Certificate Cards -->
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-certificate text-3xl text-yellow-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Certificate of Presentation</h3></div>
+          <a href="certs/1.Certificate of Presentation.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-code text-3xl text-green-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Python Functions & Dictionaries</h3></div>
+          <a href="certs/2.Python Functions, Files, and Dictionaries.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-robot text-3xl text-pink-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Generative AI</h3></div>
+          <a href="certs/3.Generative AI Elevate your Software Development.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-github text-3xl text-white mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Git & GitHub</h3></div>
+          <a href="certs/4.Getting Started with Git and GitHub.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-brain text-3xl text-purple-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">AI with Flask</h3></div>
+          <a href="certs/5.Developing AI Applications with Python and Flask.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-network-wired text-3xl text-blue-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Microservices</h3></div>
+          <a href="certs/6. Application Development using Microservices and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-comments text-3xl text-yellow-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Python Chatbot</h3></div>
+          <a href="certs/7.Customer Service with PythonBuild a Chatbot.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-node-js text-3xl text-green-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Node.js Backend I</h3></div>
+          <a href="certs/8.Developing Back End Apps with Node js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-python text-3xl text-white mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Django + SQL</h3></div>
+          <a href="certs/9.Django Application Development with SQL and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-server text-3xl text-orange-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Node.js Backend II</h3></div>
+          <a href="certs/10.Developing Back-End Apps with Node.js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-react text-3xl text-cyan-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">React Front-End</h3></div>
+          <a href="certs/11.Developing Front-End Apps with React.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-layer-group text-3xl text-pink-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Full Stack Capstone</h3></div>
+          <a href="certs/12.Full Stack Application Development Capstone.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-check-circle text-3xl text-green-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Developer Assessment</h3></div>
+          <a href="certs/13.Full Stack Software Developer Assessment.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-cloud text-3xl text-blue-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Cloud Computing</h3></div>
+          <a href="certs/14.Introduction to Cloud Computing.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-docker text-3xl text-blue-200 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Docker & K8s</h3></div>
+          <a href="certs/15.Introduction to Containers w Docker Kubernetes.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fab fa-html5 text-3xl text-red-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">HTML, CSS, JS</h3></div>
+          <a href="certs/16.Introduction to HTML, CSS & JavaScript.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-laptop-code text-3xl text-indigo-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Software Engineering</h3></div>
+          <a href="certs/17. Introduction to Software Engineering.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-keyboard text-3xl text-green-200 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Programming Basics</h3></div>
+          <a href="certs/18.Programming for Everybody (Getting Started with.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+        <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
+          <div><i class="fas fa-briefcase text-3xl text-yellow-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Career & Interview Guide</h3></div>
+          <a href="certs/19.Software Developer Career Guide and Interview.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+        </div>
+      </div>
+
+      <!-- Pagination dots -->
+      <div class="swiper-pagination mt-6"></div>
+    </div>
+  </div>
+</section>
+
 
     <section id="cv" data-aos="flip-down">
       <h2 class="section-title text-center">My CV</h2>
@@ -219,5 +318,35 @@
       if (e.target === chatbotModal) chatbotModal.classList.add("hidden");
     });
   </script>
+<!-- Swiper JS -->
+<!-- Swiper JS -->
+<script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
+<!-- Swiper CDN -->
+<link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
+
+<script>
+  const swiper = new Swiper('.mySwiper', {
+    slidesPerView: 1.2,
+    spaceBetween: 20,
+    centeredSlides: true,
+    grabCursor: true,
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev'
+    },
+    breakpoints: {
+      640: { slidesPerView: 2 },
+      768: { slidesPerView: 3 },
+      1024: { slidesPerView: 3.5 }
+    }
+  });
+</script>
+
+
 </body>
 </html>
