--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-laptop-code text-3xl text-indigo-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Software Engineering</h3></div>
-          <a href="Certification/ Introduction to Software Engineering.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Introduction to Software Engineering.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-keyboard text-3xl text-green-200 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Programming Basics</h3></div>
