--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
     }
   });
 </script>
+<script>
+  window.addEventListener("beforeunload", function (e) {
+    alert("Thanks for visiting! Come back soon 😊");
+  });
+</script>
 
 
 
