--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
         <div class="space-y-4 text-lg">
           <p><i class="fas fa-envelope icon" style="color:#FFD700;"></i><strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com">prasadghavghave0@gmail.com</a></p>
           <p><i class="fas fa-phone icon" style="color:#FFD700;"></i><strong>Phone:</strong> +91 9322860752</p>
-          <p><i class="fab fa-github icon" style="color:#FFD700;"></i><strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave">github.com/prasad-ghavghave</a></p>
-          <p><i class="fab fa-linkedin icon" style="color:#FFD700;"></i><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave">linkedin.com/in/prasad-ghavghave</a></p>
+          <p><i class="fab fa-github icon" style="color:#FFD700;"></i><strong>GitHub:</strong> <a href="https://github.com/prasad111-dev">github.com/prasad-ghavghave</a></p>
+          <p><i class="fab fa-linkedin icon" style="color:#FFD700;"></i><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/prasad-ghavghave-b521a4357">linkedin.com/in/prasad-ghavghave</a></p>
           <p><i class="fas fa-graduation-cap icon" style="color:#FFD700;"></i><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en">View Profile</a></p>
         </div>
         <form action="https://formsubmit.co/prasadghavghave0@gmail.com" method="POST" class="glass-card p-6 rounded-xl space-y-4">
