--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
           <a href="#" class="text-2xl font-bold text-white">Prasad<span class="text-yellow-400">.</span></a>
-          <p class="mt-2 text-sm">Data Analytics Engineer & AIML Specialist</p>
+          <p class="mt-2 text-sm">Data Analytics Engineer & AIML Engineer</p>
         </div>
         
         <div class="flex space-x-6 mb-6 md:mb-0">
@@ -880,7 +880,7 @@
     });
 
     // Typing animation
-    const roles = ["Data Analytics Engineer", "AIML Specialist", "Python Developer"];
+    const roles = ["Data Analytics Engineer", "AIML Engineer", "Python Developer"];
     let part = 0, partIndex = 0, isDeleting = false;
     const el = document.getElementById("typed-text"), speed = 50;
     
